// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link change the class when hovered 1`] = `
<a
  className="normal_1tsdo2i"
  href="https://hissues.herokuapp.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  HIssues
</a>
`;

exports[`Link change the class when hovered 2`] = `
<a
  className="hovered_137u7ef"
  href="https://hissues.herokuapp.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  HIssues
</a>
`;

exports[`Link change the class when hovered 3`] = `
<a
  className="normal_1tsdo2i"
  href="https://hissues.herokuapp.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  HIssues
</a>
`;
